# pccd-cancer-demo-2026

./: README.md  docref_port.py  pyproject.toml
cumulus_library_glioma/: manifest.toml
cumulus_library_glioma/athena/: README.md  glioma__cohort_casedef.sql  glioma__cohort_casedef_comorbidity.sql  glioma__cohort_casedef_index.sql  glioma__cohort_casedef_index_post.sql  glioma__cohort_casedef_post.sql  glioma__cohort_casedef_pre.sql  glioma__cohort_dx.sql  glioma__cohort_rx.sql  glioma__cohort_study_period.sql  glioma__cohort_study_population.sql  glioma__cohort_study_population_diag.sql  glioma__count_patient_casedef.sql  glioma__cube_documentreference_sample_casedef_index_post.sql  glioma__cube_encounter_casedef.sql  glioma__cube_encounter_sample_casedef_index_post.sql  glioma__cube_patient_casedef.sql  glioma__cube_patient_rx.sql  glioma__include_age_at_visit.sql  glioma__include_gender.sql  glioma__include_study_period.sql  glioma__include_utilization.sql  glioma__llm.sql  glioma__valueset_casedef.sql  glioma__valueset_morphology.sql  glioma__valueset_topography.sql
cumulus_library_glioma/llm/: glioma__llm.sql  pydantic_cancer.py  pydantic_drugs.py
cumulus_library_glioma/llm/examples/: glioblastoma-multiforme-consult.html  glioma-1.html  glioma-1.txt  glioma-2.html  glioma-consult.html
cumulus_library_glioma/llm/examples/fhir/: glioma-1.ndjson  glioma-2.ndjson  glioma-consult.ndjson
cumulus_library_glioma/llm/pydantic_schema/: annotation.py  drugs.py  genes.py  mention.py  pathology.py  surgery.py
cumulus_library_glioma/spreadsheet/: glioma__valueset_topography.csv
cumulus_library_glioma/tools/: cube.py  fhir2sql.py  filetool.py  guard.py  valueset.py
cumulus_library_glioma/valueset/: glioma__valueset_topography.csv
llm/: pydantic_base.py  pydantic_cancer.py  pydantic_drugs.py  pydantic_genes.py
llm/examples/: glioblastoma-multiforme-consult.txt  glioma-2.txt.clean.txt  glioma-consult.txt
resources/: valueset_casedef.csv  valueset_morphology.csv  valueset_topography.csv  valuesets.toml
